<resources>
    <string name="app_name">Prime Fitness</string>
    <string name="home">Home</string>
    <string name="log_in">Log In</string>
    <string name="add_member">Add Member</string>
    <string name="fees_pending">Fees Pending</string>
    <string name="setting">Setting</string>
    <string name="add_update_fee">Add/Update Fee</string>
    <string name="change_password_mobile">Change Password/Mobile</string>
    <string name="log_out">Log out</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="gym_membership_price">Gym Membership Price</string>
    <string name="_1_month_fee">1 Month Fee :</string>
    <string name="_0_00">0.00</string>
    <string name="_3_months_fee">3 Months Fee</string>
    <string name="saveMembershipPlan">Save</string>
    <string name="active">Active</string>
    <string name="search">Search</string>
    <string name="renewal">Renewal</string>

    <string-array name="membership">
        <item>Select</item>
        <item>1 Month</item>
        <item>3 Month</item>
    </string-array>

    <string name="channel_name">test</string>
    <string name="channel_id">i.apps.notifications</string>
    <string name="channel_description">test notification</string>
    <string name="database_settings">Database Settings</string>
</resources>